Actions
Bug #21103
closedBinding problem with delegate methods
Bug #21103:
Binding problem with delegate methods
Updated by byroot (Jean Boussier) over 1 year ago
- Backport changed from 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: UNKNOWN to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: REQUIRED
Updated by nobu (Nobuyoshi Nakada) over 1 year ago
- Status changed from Open to Closed
Applied in changeset git|db02a6b3ab4cabbdf492c26dcb1929b4ef0370a1.
[Bug #21103] Fix local variable index calculation with forwarding
Forwarding argument is optimized not to packed when no other arguments
and an internal object refers values before it. This size is decided
at called time, calculate the local variable index from the fixed end
point.
Updated by k0kubun (Takashi Kokubun) over 1 year ago
- Backport changed from 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: REQUIRED to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: DONE
ruby_3_4 e5403bd137d57991d8788cd29bbb5916d75acb36 merged revision(s) db02a6b3ab4cabbdf492c26dcb1929b4ef0370a1.
Actions